Finish table resize

--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -65,8 +65,9 @@
     right: 0;
     background-color: $primary-color;
     opacity: 0;
+    z-index: 1000;
     &:hover {
-      opacity: 1;
+      opacity: 1 !important;
     }
   }
   .col-resize {
